--- a/content/index.adoc
+++ b/content/index.adoc
@@ -1,7 +1,12 @@
 = Mastering Cassandra
+Jon Haddad <jon@jonhaddad.com>
 
-include::chapters/001_intro/00_index.adoc[]
-include::chapters/002_scale_problem/00_index.adoc[]
-include::chapters/003_basics/00_index.adoc[]
-include::chapters/004_data_modeling/00_index.adoc[]
-include::chapters/010_common_operations/00_index.adoc[]
+:toc:
+
+include::chapters/01_intro/00_index.adoc[]
+include::chapters/02_scale_problem/00_index.adoc[]
+include::chapters/03_basics/00_index.adoc[]
+include::chapters/04_data_modeling/00_index.adoc[]
+include::chapters/10_common_operations/00_index.adoc[]
+
+Thanks
