--- a/content/index.adoc
+++ b/content/index.adoc
@@ -18,3 +18,4 @@ include::chapters/05_getting_started/00_index.adoc[]
 
 include::chapters/10_common_operations/00_index.adoc[]
 
+include::chapters/20_performance_tuning/00_index.adoc[]
